Update worker links route and dependencies
Fix data-ops/worker wiring and refresh generated bindings and lockfiles.

--- a/apps/user-application/wrangler.jsonc
+++ b/apps/user-application/wrangler.jsonc
@@ -14,4 +14,11 @@
   "observability": {
     "enabled": true,
   },
-}
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_id":"cedcda18-1bb3-4a89-b74f-d0c724660842",
+      "remote":true,
+
+    },
+]}
